fix times aligning in grid

--- a/styles/global.css
+++ b/styles/global.css
@@ -20,14 +20,14 @@ body {
 }
 
 .time {
-  font-size: 4vw;
+  font-size: 4.25vw;
   text-align: center;
-  line-height: 0.55;
+  line-height: 100%;
 }
 
 .meridian {
   position: absolute;
-  bottom: 0;
+  bottom: 22%;
   right: -14%;
   color: gray;
   font-size: 2vw;
@@ -35,7 +35,7 @@ body {
 }
 
 .label {
-  margin: 10px 0 0;
+  margin: 0;
   text-align: center;
   font-size: 20px;
   color: #bbb;
@@ -44,7 +44,6 @@ body {
 #unix-time-milliseconds {
   color: gray;
   font-size: 2vw;
-  line-height: 0.55;
 }
 
 /* #swatch-time {
